[project]
name = "unrealdevhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "psutil>=5.9",
]

[project.scripts]
unrealdevhelper-mcp = "unrealdevhelper.server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
