[project]
name = "unrealdevhelper"
version = "0.1.0"
description = "CLI for Unreal Editor Python Remote Execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9",
]

[project.scripts]
unreal-dev-helper = "unreal_dev_helper.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unreal_dev_helper"]
